coffee-shop/deployment/systemtest/coffee-shop-processor.yaml
kind: Service
apiVersion: v1
metadata:
  name: coffee-processor
  namespace: systemtest
spec:
  selector:
    app: coffee-processor
  ports:
    - port: 8080
  type: NodePort
---
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: coffee-processor
  namespace: systemtest
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: coffee-processor
    spec:
      containers:
      - name: coffee-processor
        image: rodolpheche/wiremock:2.6.0
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: coffee-processor
  namespace: systemtest
spec:
  rules:
    - host: coffee-processor.test.kubernetes.local
      http:
        paths:
        - path: /
          backend:
            serviceName: coffee-processor
            servicePort: 8080
---
