coffee-shop/deployment/systemtest/coffee-shop.yaml
kind: Service
apiVersion: v1
metadata:
  name: coffee-shop
  namespace: systemtest
spec:
  selector:
    app: coffee-shop
  ports:
    - port: 8080
  type: NodePort
---
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: coffee-shop
  namespace: systemtest
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: coffee-shop
    spec:
      containers:
      - name: coffee-shop
        image: docker.sebastian-daschner.com/coffee-shop:1
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /coffee-shop/resources/
            port: 8080
      restartPolicy: Always
      imagePullSecrets:
      - name: regsecret
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: coffee-shop
  namespace: systemtest
spec:
  rules:
    - host: coffee-shop.test.kubernetes.local
      http:
        paths:
        - path: /
          backend:
            serviceName: coffee-shop
            servicePort: 8080
---
