coffee-shop/deployment/systemtest/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: coffee-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coffee-gateway
spec:
  hosts:
  - "*"
  gateways:
  - coffee-gateway
  http:
  - match:
    - uri:
        prefix: "/barista"
    - uri:
        prefix: "/__admin"
    route:
    - destination:
        host: barista
        subset: v1
        port:
          number: 9080
  - match:
    - uri:
        prefix: "/coffee-shop"
    route:
    - destination:
        host: coffee-shop
        subset: v1
        port:
          number: 9080
---
